# python-monorepo-demo

./: LICENSE  README.md
apps/be-funny/: README.md  pyproject.toml
apps/be-funny/be_funny/: __init__.py
apps/be-funny/be_funny/cli/: __init__.py  __main__.py
apps/be-funny/be_funny/dataset/: core.py
apps/be-funny/be_funny/model/: __init__.py  matching.py
libs/modeling/: pyproject.toml
libs/modeling/modeling/: __init__.py
libs/processing/: pyproject.toml
