[tool.poetry]
name = "be-funny"
version = "0.1.0"
description = ""
authors = ["Joseph Yen <joseph.yen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.1"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
be-funny = 'be_funny.cli.__main__:main'

